<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.emergencylastjournal.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_createSession"
            app:destination="@id/navigation_create_session"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_home_to_history"
            app:destination="@id/navigation_history"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_home_to_contacts"
            app:destination="@id/navigation_contacts"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.emergencylastjournal.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.emergencylastjournal.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_history_to_historyDetail"
            app:destination="@id/navigation_history_detail"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.emergencylastjournal.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_create_session"
        android:name="com.example.emergencylastjournal.CreateJournalFragment"
        android:label="Tạo Nhật ký"
        tools:layout="@layout/fragment_create_journal" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.emergencylastjournal.ContactsFragment"
        android:label="@string/trusted_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_history_detail"
        android:name="com.example.emergencylastjournal.HistoryDetailFragment"
        android:label="Chi tiết lộ trình"
        tools:layout="@layout/fragment_history_detail">
        <argument
            android:name="SESSION_ID"
            app:argType="integer" />
    </fragment>

</navigation>